# celery_worker_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
celery_worker/: celery.hpp  db_config.hpp
celery_worker/rabbitmq/: rabbitmq.hpp
celery_worker/redis/: redis.hpp
cmake/: FindHiredis.cmake  FindJsoncpp.cmake  FindRabbitmqc.cmake
python/: run_add.py  run_add_callbacks.py  run_add_chain.py  tasks.py
test/: CMakeLists.txt  celery_add.cpp  rabbitmq.cpp  redis.cpp  test_celery_add.sh
